schema added get retrieve works, webhook doesn't

--- a/app/views/tracker/position.html.erb
+++ b/app/views/tracker/position.html.erb
@@ -1,10 +1,12 @@
 <h1>Tracker#position</h1>
 <p>Find me in app/views/tracker/position.html.erb</p>
 
-<%= @response %>
-
+<%= @response.size() %>
 <br/>
-<br/>
-<br/>
-
 <%= @response[0]["latitude"] %>
+<br/>
+<br/>
+<br/>
+<br/>
+
+<%= @response %>
