first release, couples bugs outstanding

--- a/app/views/webhook/logistidata.html.erb
+++ b/app/views/webhook/logistidata.html.erb
@@ -1,5 +1,8 @@
 <h1>Webhook#logistidata</h1>
-<p>Find me in app/views/webhook/logistidata.html.erb</p>
+<p>Find all me in app/views/webhook/logistidata.html.erb</p>
+<%= @request %>
+<br/>
 <%= @webhook %>
-<%= @gurd %>
-<%= @event.class() %>
+<br/>
+<%= @testrequest %>
+<%= @data.class() %>
